--- a/FavoriteTrips.html
+++ b/FavoriteTrips.html
@@ -3,7 +3,7 @@
     <body>
         <style>
             html{
-                background-color: darkorange;
+                background-color: purple;
 
             }
             h1{
